tabs fix bug modify gap in the example

--- a/src/assets/examples/tab-group-theme/tab-group-theme.component.css
+++ b/src/assets/examples/tab-group-theme/tab-group-theme.component.css
@@ -1,6 +1,6 @@
 .example-button-toggle-label {
   display: inline-block;
-  margin: 16px;
+  margin: 0 24px 24px 24px;
   font-weight: 300;
   font-size: 16px;
   color: #696969;
@@ -15,7 +15,7 @@
 }
 
 .mat-radio-button ~ .mat-radio-button {
-  margin-left: 16px;
+  margin-left: 24px;
 }
 
 .mat-radio-group {
